added call stack to web visualizer

--- a/web_visualizer/styles.css
+++ b/web_visualizer/styles.css
@@ -98,8 +98,8 @@ section{
     align-items: center;
     box-sizing: border-box;
     padding-bottom: 5vh;
+    
 }
-
 #stack > div{
     margin: 5px 0;
     width: 80%;
@@ -107,4 +107,24 @@ section{
     font-size: 1rem;
     color: black;
     padding: 5px;
+}
+
+#misc{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+}
+#console{
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+#controlButtons{
+    grid-row: 3;
+    grid-column: 1 / 3;
+}   
+
+#misc > section{
+    box-sizing: border-box;
+    padding: 2%;
 }
